<resources>
    <string name="app_name">TP3-DevMob</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_name">Name</string>
    <string name="label_birtdate">Birtdate</string>
    <string name="label_surname">Surname</string>
    <string name="label_number">Number</string>
    <string name="label_mail">Mail</string>
    <string name="label_hobbies">Hobbies</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="load">load</string>
    <string name="validate">Validate</string>

</resources>